# Clip-Claude

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README.zh-TW.md  install.ps1  install.sh  uninstall.ps1  uninstall.sh
.claude/: settings.json
docs/: toolchain.md
scripts/: dev.ps1  dev.sh  install.ps1  install.sh  setup.ps1  setup.sh
src/: bg.rs  cache.rs  cli.rs  clipboard_io.rs  focus.rs  inject.rs  install.rs  lib.rs  main.rs  remote.rs  runner.rs  ssh_session.rs  watcher.rs
