[package]
name = "clipbridge"
version = "0.1.0"
edition = "2021"
description = "Clipboard image bridge — paste screenshots into terminal AI agents (Claude Code, Gemini CLI, Codex) as if they natively supported image paste."
license = "MIT"

[lib]
name = "clipbridge"
path = "src/lib.rs"

[[bin]]
name = "clipbridge"
path = "src/main.rs"

[[bin]]
name = "clipbridge-bg"
path = "src/bg.rs"

[dependencies]
anyhow = "1"
arboard = "3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = ["Win32_Foundation", "Win32_System_DataExchange", "Win32_System_Memory"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
