[package]
name = "clip-claude"
version = "0.1.0"
edition = "2021"
description = "Clip-Claude (即貼即克) — paste screenshots into terminal AI agents (Claude Code, Gemini CLI, Codex) as if they natively supported image paste."
license = "MIT"

[lib]
name = "clip_claude"
path = "src/lib.rs"

[[bin]]
name = "clip-claude"
path = "src/main.rs"

[[bin]]
name = "clip-claude-bg"
path = "src/bg.rs"

[dependencies]
anyhow = "1"
arboard = "3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = ["Win32_Foundation", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSData", "NSArray"] }
objc2-app-kit = { version = "0.2", features = ["NSPasteboard", "NSWorkspace", "NSRunningApplication", "NSImage"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
